tests/errors/preprocessor/037_nonexisting_file.c.expect
./tests/errors/preprocessor/037_nonexisting_file.c:1:8: error: include file not found: 'nonexisting.h'
1 | #include "nonexisting.h"
           ^
